<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="2dp"
    android:background="@drawable/default_rounded_menu_buttons">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvKeyboardButtonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2.25"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/keyboard_C"
            android:textColor="@color/black"
            android:autoSizeTextType="uniform"
            android:lines="2"/>

        <ImageView
            android:id="@+id/ivKeyboardButtonDelete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_backspace" />

        <TextView
            android:id="@+id/tvKeyboardButtonMultiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.15"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/keyboard_multiply"
            android:textColor="@color/black"
            android:autoSizeTextType="uniform"
            android:lines="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvKeyboardButtonSeven"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/keyboard_7"
            android:textColor="@color/black"
            android:autoSizeTextType="uniform"
            android:lines="2" />

        <TextView
            android:id="@+id/tvKeyboardButtonEight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/keyboard_8"
            android:textColor="@color/black"
            android:autoSizeTextType="uniform"
            android:lines="2" />

        <TextView
            android:id="@+id/tvKeyboardButtonNine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/keyboard_9"
            android:textColor="@color/black"
            android:autoSizeTextType="uniform"
            android:lines="2" />

        <TextView
            android:id="@+id/tvKeyboardButtonMinus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/keyboard_minus"
            android:textColor="@color/black"
            android:autoSizeTextType="uniform"
            android:lines="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvKeyboardButtonFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/keyboard_4"
            android:textColor="@color/black"
            android:autoSizeTextType="uniform"
            android:lines="2" />

        <TextView
            android:id="@+id/tvKeyboardButtonFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/keyboard_5"
            android:textColor="@color/black"
            android:autoSizeTextType="uniform"
            android:lines="2" />

        <TextView
            android:id="@+id/tvKeyboardButtonSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/keyboard_6"
            android:textColor="@color/black"
            android:autoSizeTextType="uniform"
            android:lines="2" />

        <TextView
            android:id="@+id/tvKeyboardButtonPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/keyboard_plus"
            android:textColor="@color/black"
            android:autoSizeTextType="uniform"
            android:lines="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvKeyboardButtonOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/keyboard_1"
                        android:textColor="@color/black"
                        android:autoSizeTextType="uniform"
                        android:lines="2" />

                    <TextView
                        android:id="@+id/tvKeyboardButtonTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/keyboard_2"
                        android:textColor="@color/black"
                        android:autoSizeTextType="uniform"
                        android:lines="2" />

                    <TextView
                        android:id="@+id/tvKeyboardButtonThree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/keyboard_3"
                        android:textColor="@color/black"
                        android:autoSizeTextType="uniform"
                        android:lines="2" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvKeyboardButtonZero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/keyboard_0"
                    android:textColor="@color/black"
                    android:autoSizeTextType="uniform"
                    android:lines="2" />

                <TextView
                    android:id="@+id/tvKeyboardButtonDot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/keyboard_dot"
                    android:textColor="@color/black"
                    android:autoSizeTextType="uniform"
                    android:lines="2" />
            </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/keyboard_enter"
                android:textColor="@color/black"
                android:autoSizeTextType="uniform"
                android:lines="2"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>