<?xml version="1.0" encoding="utf-8"?>
<layout>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ReportsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvServiceReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/services"
                android:textSize="22sp"
                android:theme="@style/tvButtonsStyle" />

            <TextView
                android:id="@+id/tvMaterialsReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/materials"
                android:textSize="22sp"
                android:theme="@style/tvButtonsStyle" />

            <TextView
                android:id="@+id/tvMoneyReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/money"
                android:textSize="22sp"
                android:theme="@style/tvButtonsStyle" />

            <TextView
                android:id="@+id/tvAllReports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="10dp"
                android:text="@string/all_reports"
                android:textSize="22sp"
                android:theme="@style/tvButtonsStyle" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvGenerateReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="10dp"
                android:textSize="22sp"
                android:text="@string/generate_report"
                android:theme="@style/tvButtonsStyle"
                android:background="@drawable/active_close_order_button"/>

            <TextView
                android:id="@+id/tvGenerateAndSendReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="10dp"
                android:textSize="22sp"
                android:text="@string/generate_and_send_report"
                android:theme="@style/tvButtonsStyle"/>

            <TextView
                android:id="@+id/tvCloseReportsActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="10dp"
                android:textSize="22sp"
                android:text="@string/exit"
                android:theme="@style/tvButtonsStyle"
                android:background="@drawable/default_rounded_menu_buttons"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDayReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:lines="1"
                android:text="@string/day"
                android:theme="@style/tvButtonsStyle" />

            <TextView
                android:id="@+id/tvMonthReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:lines="1"
                android:text="@string/month"
                android:theme="@style/tvButtonsStyle" />

            <TextView
                android:id="@+id/tvYearReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:lines="1"
                android:text="@string/year"
                android:theme="@style/tvButtonsStyle" />
        </LinearLayout>

        <EditText
            android:id="@+id/tvYearValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:lines="1"
            android:hint="@string/enter_year"
            android:gravity="center"
            android:foreground="@color/black"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:theme="@style/tvButtonsStyle"
            android:visibility="invisible" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dateTextAppearance="@style/CalenderViewDateCustomText"
            android:theme="@style/CalenderViewCustom"
            android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"/>

    </LinearLayout>
</LinearLayout>
</layout>