<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:textColorHint="@color/grey"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/order_without_materials"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNegativeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/cancel"
            android:theme="@style/tvButtonsStyle"
            tools:ignore="TouchTargetSizeCheck"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/tvPositiveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/ok"
            android:theme="@style/tvButtonsStyle"
            android:background="@drawable/active_close_order_button"
            tools:ignore="TouchTargetSizeCheck"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>
</LinearLayout>