<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:minWidth="200dp"
        android:background="@drawable/default_rounded_menu_buttons">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/default_rounded_menu_buttons"
            android:gravity="center"
            android:text="@string/create_database_backup"
            android:textColor="@color/black"
            android:textSize="24sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSendDatabase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/default_rounded_menu_buttons"
                android:gravity="center"
                android:text="@string/send"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:id="@+id/tvSaveDatabase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/default_rounded_menu_buttons"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:clickable="true"
                android:focusable="true"/>
        </LinearLayout>
    </LinearLayout>
</layout>